--- a/stm.css
+++ b/stm.css
@@ -60,8 +60,12 @@ footer { width: 100%;
 
  .za {font-size: 50px;}
 
- @media screen and (max-width: 325px) {
+ @media screen and (max-width: 425px) {
   header {
-    width: 100%;
+    flex-direction: column;
   }
+ .head, .social {
+          with: 100%;
+          box-sizing: border-box;
+ }
  }
