--- a/stm.css
+++ b/stm.css
@@ -61,11 +61,7 @@ footer { width: 100%;
  .za {font-size: 50px;}
 
  @media screen and (max-width: 325px) {
-  header {
-    flex-direction: column;
+  .social{
+           margin-left: 10px;
   }
- .head, .social {
-          with: 100%;
-          box-sizing: border-box;
- }
  }
