--- a/stm.css
+++ b/stm.css
@@ -2,7 +2,11 @@ header { width: 100%;
          height: 100px;
          background-color: black;
          color: white;
-         position: relative;
+         display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 15px;
+        
          }
 
 .az {font-size: 50px;}
@@ -10,9 +14,7 @@ header { width: 100%;
 .social{
   font-size: 40px;
   padding-left: 10px;
-  position: absolute;
-  top: 10px;
-  right: 22px;
+  
 }
 
 .main{
@@ -61,7 +63,14 @@ footer { width: 100%;
  .za {font-size: 50px;}
 
  @media screen and (max-width: 425px) {
-  .social{
-           margin-left: 50px;
+  .az{
+         font-size: 28px;
   }
+  .social{
+      font-size: 24;
+  }
+ header{
+      height: 70px;
  }
+          
+           }
