--- a/stm.css
+++ b/stm.css
@@ -1,12 +1,8 @@
-header { width: 100%;
+header { 
          height: 100px;
          background-color: black;
          color: white;
-         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 30px;
-        box-sizing: border-box;
+         
          }
 .head{
  display: flex;
@@ -15,15 +11,23 @@ gap: 10px;
 }
 
 .head i{
-  font-size: 38px;
+  font-size: clamp(22px 3vw 36px);
+}
+
+.header-inner {
+max-width: 1100px;
+margin: 0 auto;
+
+display: flex;
+justify-content: space-between;
+align-items: center;
 }
 
 
-
-.az {font-size: 36px;}
+.az {font-size: clamp(22px 3vw 36px);}
 
 .social{
-  font-size: 28px;
+  font-size: clamp(18px 2vw 28px);
   display: flex;
   gap: 12px;
 }
