--- a/stm.css
+++ b/stm.css
@@ -1,35 +1,18 @@
-header { 
+header { width: 100%;
          height: 100px;
          background-color: black;
          color: white;
-         
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+
+         padding: 0 15px
          }
-.head{
- display: flex;
-align-items: center;
-gap: 10px;
-}
 
-.head i{
-  font-size: clamp(22px 3vw 36px);
-}
-
-.header-inner {
-max-width: 1100px;
-margin: 0 auto;
-
-display: flex;
-justify-content: space-between;
-align-items: center;
-}
-
-
-.az {font-size: clamp(22px 3vw 36px);}
+.az {font-size: 50px;}
 
 .social{
-  font-size: clamp(18px 2vw 28px);
-  display: flex;
-  gap: 12px;
+  font-size: 40px;
 }
 
 .main{
@@ -78,19 +61,16 @@ footer { width: 100%;
  .za {font-size: 50px;}
 
  @media screen and (max-width: 425px) {
-  header{
-         height: 70px;
-         padding: 0 12px;
-  }
-  .az{
-      font-size: 26px;
-  }
- .social{
-      font-size: 22px;
-      gap: 8px;
- }
-.head i{
- font-size: 24px;
+
+.az {
+font-size: 28px;
 }
-          
-           }
+
+.social {
+font-size: 24px;
+}
+
+header {
+height: 70px;
+}
+}
