--- a/stm.css
+++ b/stm.css
@@ -5,13 +5,22 @@ header { width: 100%;
          display: flex;
          justify-content: space-between;
          align-items: center;
-
          padding: 0 20px;
          }
+
+.header-inner{
+ max-width: 1200px;
+margin: 0 auto;
+padding: 0 20px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
 .head{
  display: flex;
  align-items: center;
- gap: 10px;        
+ gap: 8px;        
 }
 
 .az {font-size: 36px;}
