--- a/stm.css
+++ b/stm.css
@@ -7,7 +7,15 @@ header { width: 100%;
          align-items: center;
          padding: 0 20px;
          }
+* {
+box-sizing: border-box;
+}
 
+body {
+margin: 0;
+padding: 0;
+overflow-x: hidden;
+}
 
 
 .head{
