--- a/stm.css
+++ b/stm.css
@@ -33,11 +33,13 @@ font-size: 10px;
 }
 
 .main{
-  width: 100%;
-  height: 300px;
+  width: 100vw;
+  height: 70vh;
+  magrin-left: calc(50% - 50vw);
   background-image: url(img/ogasuta458A7801_TP_V1.jpg);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
 }
 
 .mains{
