--- a/stm.css
+++ b/stm.css
@@ -14,7 +14,6 @@ box-sizing: border-box;
 body {
 margin: 0;
 padding: 0;
-overflow-x: hidden;
 }
 
 
@@ -34,9 +33,8 @@ align-items: center;
 }
 
 .main{
-  width: 100vw;
+  width: 100%;
   height: 70vh;
-  magrin-left: calc(50% - 50vw);
   background-image: url(img/ogasuta458A7801_TP_V1.jpg);
   background-size: cover;
   background-position: center;
