--- a/stm.css
+++ b/stm.css
@@ -2,46 +2,25 @@ header { width: 100%;
          height: 100px;
          background-color: black;
          color: white;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         padding: 0 20px;
+         position: relative;
          }
-* {
-box-sizing: border-box;
-}
 
-body {
-margin: 0;
-padding: 0;
-}
-
-
-.head{
- display: flex;
- gap: 10px;  
-align-items: center;
-}
-
-.head i{
- font-size: 36px;
-}
-
-.az {font-size: 28px;}
+.az {font-size: 30px;}
 
 .social{
-  font-size: 28px;
-  display: flex;
-  gap: 14px; 
+  font-size: 20px;
+  padding-left: 10px;
+  position: absolute;
+  top: 10px;
+  right: 22px;
 }
 
 .main{
   width: 100%;
-  height: 70vh;
+  height: 300px;
   background-image: url(img/ogasuta458A7801_TP_V1.jpg);
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
 }
 
 .mains{
@@ -82,16 +61,7 @@ footer { width: 100%;
  .za {font-size: 50px;}
 
  @media screen and (max-width: 425px) {
-
-.az {
-font-size: 28px;
-}
-
-.social {
-font-size: 24px;
-}
-
-header {
-height: 70px;
-}
-}
+  header {
+    width: 100%;
+  }
+ }
